# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md
.github/workflows/: ci.yml  cpack.yml  release.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  example1  example2  install_manifest.txt
banking_lib/: CMakeLists.txt
banking_lib/include/: Account.h  Transaction.h
banking_lib/src/: Account.cpp  Transaction.cpp
banking_lib/tests/: test_account.cpp  test_transaction.cpp
formatter_ex_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
tests/: test1.cpp
